--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
 theme: jekyll-theme-minimal
-title: Quality Framework for the Use of Amdinistrative Data in Statistics
+title: Quality Framework for the Use of Administrative Data in Statistics
