--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,29 @@
+<!DOCTYPE html>
+
 theme: jekyll-theme-minimal
 title: Quality Framework for the Use of Administrative Data in Statistics
+
+
+<div class="col-12 col-md-3 bd-sidebar site-navigation show" id="site-navigation">
+    
+        <div class="navbar-brand-box">
+    <a class="navbar-brand text-wrap" href="index.html">
+    
+      
+    </a>
+
+</form><nav class="bd-links" id="bd-docs-nav" aria-label="Main navigation">
+    <div class="bd-toc-item active">
+      
+<ul class="nav bd-sidenav">
+ <li class="toctree-l1 has-children">
+  <a class="reference internal" href="intro_guide.html">
+   User Guide
+  </a>
+
+ </li>
+</ul>
+
+</div>
+
+</div>
